# clone_x

./: .dockerignore  .env.example  .gitignore  .railwayignore  .vercelignore  Dockerfile  Procfile  README.md  docker-compose.yml  docker-helper.bat  docker-helper.sh  pyproject.toml  render.yaml  requirements.txt  run.py  runserver.bat  runserver.ps1  start.sh  test_api.py  test_complete.py  test_playwright.py  test_register.py
backend/: middleware.py  settings.py  urls.py
frontend/: .env.example  .env.production  Dockerfile.dev
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DebugInfo.jsx
frontend/src/components/Comments/: index.jsx
frontend/src/components/Navbar/: index.jsx
frontend/src/components/Post/: index.jsx
frontend/src/components/PostForm/: index.jsx
frontend/src/components/ProfileEditModal/: index.jsx
frontend/src/components/Search/: index.jsx
frontend/src/pages/Feed/: index.jsx
frontend/src/pages/Login/: index.jsx
frontend/src/pages/Profile/: index.jsx
frontend/src/pages/Register/: index.jsx
frontend/src/services/: api.js
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_likes.py  0003_post_image.py  0004_comment.py
users/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_follows_alter_profile_id.py  0003_follow_delete_profile.py  0004_profile.py  0005_profile_bio.py
